[tool.poetry]
name = "django-flex-reviews"
version = "0.1.0"
description = "Implements a flexible user review schema for your django app."
authors = ["Nick Ivons <niicck@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "supergood_review_site"}]
homepage = "https://github.com/niicck/django-flex-reviews"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    'Natural Language :: English',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
django = ">=3.2"
django-stubs-ext = ">=0.7.0"
django-vite = "^2.0.2"
django-widget-tweaks = "^1.4.12"
django-querysetsequence = "^0.17"

[tool.poetry.group.dev.dependencies]
# Dependencies required to run app locally.
django-environ = "^0.9.0"
beautifulsoup4 = "^4.11.2"
pydantic = "^1.10.5"
ipython = "^8.4"
django-extensions = "^3.2.1"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.6.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5"
factory-boy = "^3.2.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.coverage.dependencies]
coverage = "^7.1.0"

[tool.poetry.group.mypy.dependencies]
mypy = "^0.991"
django-stubs = "^1.14.0"
types-beautifulsoup4 = "^4.12.0.5"

[tool.poetry.group.safety.dependencies]
# pinned until conflict with packaging is fixed
# https://github.com/pyupio/safety/issues/455
safety = "==2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
